--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         }
     ],
     "require": {
-        "symfony/mailer": "^5.3"
+        "symfony/mailer": "^5.3",
+        "codeguy/upload": "^1.3",
+      "ext-pdo": "*"
     }
 }
