--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "symfony/mailer": "^5.3",
         "codeguy/upload": "^1.3",
-      "ext-pdo": "*"
+      "ext-pdo": "*",
+      "ext-json": "*"
     }
 }
